--- a/13_Entrega_12.02.2021_React_front_avançado/src/App.css
+++ b/13_Entrega_12.02.2021_React_front_avançado/src/App.css
@@ -1,6 +1,10 @@
+body {
+  background-color:black !important;
+}
+
 .App {
   text-align: center;
-  
+  background-color:black !important;
 }
 
 .logo{
@@ -10,6 +14,7 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  background-color:black !important;
 }
 
 @media (prefers-reduced-motion: no-preference) {
